<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GetHelpPage"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:id="@+id/GetHelpPage_backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24" />

        <TextView
            android:id="@+id/Feedback_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/GetHelpPage_backArrow"
            android:drawablePadding="20dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/HelpPage_Title"
            android:textSize="30sp" />

    </RelativeLayout>
    <View
        android:id="@+id/lineFeedBack"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@+id/Feedback_Title"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/help_map_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HelpPage_SubTitle1"
            android:textSize="30sp"
            android:fontFamily="@font/poppins_light"
            app:drawableRightCompat="@drawable/ic_outline_arrow_forward_ios_24"
            android:layout_marginBottom="15dp"/>
        <View
            android:id="@+id/lineHelpMap"
            android:layout_width="match_parent"
            android:layout_height=".7dp"
            android:background="@android:color/darker_gray"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"/>

        <TextView
            android:id="@+id/help_wallet_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HelpPage_SubTitle2"
            android:textSize="30sp"
            android:fontFamily="@font/poppins_light"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="15dp"
            app:drawableRightCompat="@drawable/ic_outline_arrow_forward_ios_24" />
        <View
            android:id="@+id/lineHelpWallet"
            android:layout_width="match_parent"
            android:layout_height=".7dp"
            android:background="@android:color/darker_gray"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"/>

        <TextView
            android:id="@+id/help_voucher_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HelpPage_SubTitle3"
            android:textSize="30sp"
            android:fontFamily="@font/poppins_light"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="15dp"
            app:drawableRightCompat="@drawable/ic_outline_arrow_forward_ios_24" />
        <View
            android:id="@+id/lineVoucherWallet"
            android:layout_width="match_parent"
            android:layout_height=".7dp"
            android:background="@android:color/darker_gray"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"/>

    </LinearLayout>


</LinearLayout>