<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditPersonalInformationPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/editProfile_backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="27dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            app:layout_constraintBottom_toTopOf="@+id/editProfile_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/editProfile_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:includeFontPadding="false"
            android:text="Save"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/editProfile_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/editProfile_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_bold"
            android:includeFontPadding="false"
            android:text="@string/editProfile_Title"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editProfile_FirstNameTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editProfile_save" />

        <TextView
            android:id="@+id/editProfile_FirstNameTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/poppins_semibold"
            android:includeFontPadding="false"
            android:text="@string/editProfile_FirstNameTitle"
            app:layout_constraintBottom_toTopOf="@+id/editProfile_FirstNameContent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editProfile_title" />

        <EditText
            android:id="@+id/editProfile_FirstNameContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:includeFontPadding="false"
            android:inputType="textPersonName"
            android:text=""
            android:hint="First Name"
            app:layout_constraintBottom_toTopOf="@+id/editProfile_LastNameTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editProfile_FirstNameTitle" />

        <TextView
            android:id="@+id/editProfile_LastNameTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="2dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/poppins_semibold"
            android:includeFontPadding="false"
            android:text="@string/editProfile_LastNameTitle"
            app:layout_constraintBottom_toTopOf="@+id/editProfile_LastNameContent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editProfile_FirstNameContent" />

        <EditText
            android:id="@+id/editProfile_LastNameContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:includeFontPadding="false"
            android:inputType="textPersonName"
            android:text=""
            android:hint="Last Name"
            app:layout_constraintBottom_toTopOf="@+id/editProfile_GenderTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editProfile_LastNameTitle" />

        <TextView
            android:id="@+id/editProfile_GenderTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/poppins_semibold"
            android:includeFontPadding="false"
            android:text="@string/editProfile_GenderTitle"
            app:layout_constraintBottom_toTopOf="@+id/editProfile_GenderContent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.45"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editProfile_LastNameContent" />

        <EditText
            android:id="@+id/editProfile_GenderContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:ems="10"
            android:fontFamily="@font/poppins"
            android:includeFontPadding="false"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text=""
            android:hint="Male/Female"
            app:layout_constraintBottom_toTopOf="@+id/editProfile_BirthDateTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editProfile_GenderTitle" />

        <TextView
            android:id="@+id/editProfile_BirthDateTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/poppins_semibold"
            android:includeFontPadding="false"
            android:text="@string/editProfile_BirthDateTitle"
            app:layout_constraintBottom_toTopOf="@+id/editProfile_BirthDateContent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editProfile_GenderContent" />

        <EditText
            android:id="@+id/editProfile_BirthDateContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="24dp"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:includeFontPadding="false"
            android:inputType="date"
            android:text=""
            android:hint="yyyy-MM-dd"
            app:layout_constraintBottom_toTopOf="@+id/editProfile_PhoneNUmberTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editProfile_BirthDateTitle" />

        <TextView
            android:id="@+id/editProfile_PhoneNUmberTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/editProfile_PhoneNumberTitle"
            app:layout_constraintBottom_toTopOf="@+id/editProfile_PhoneNumberContent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editProfile_BirthDateContent" />

        <EditText
            android:id="@+id/editProfile_PhoneNumberContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:inputType="phone"
            android:minHeight="48dp"
            android:text=""
            android:hint="Phone Number"
            android:fontFamily="@font/poppins"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editProfile_PhoneNUmberTitle" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>